--- a/myCSS.css
+++ b/myCSS.css
@@ -37,7 +37,7 @@ body {
 	text-align: center;
 }
 .footer {
-	background: #059E58;
+	background: #36EB98;
 	margin: 0px;
 	float: left;
 	width: 100%;
